Update wordcount example

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 LearningScala/.idea/
 SparkStreamingExamples/.idea/
 SparkStreamingExamples/project/
+WordCount/.idea/
+WordCount/project/project/
+WordCount/project/target/
+WordCount/target/
